<resources>
    <string name="app_name">Reader</string>
    <string name="menu_action_setting" translatable="true">Settings</string>
    <string name="menu_action_search" translatable="false">Search</string>
    <string name="search_fab_description" translatable="true">Search Books</string>
    <string name="main_book_image_description" translatable="false">Book Image</string>
    <string name="problem" translatable="true">Could not load Books.</string>
    <string name="query_hint" translatable="true">Book Name(Type)</string>
    <string name="search_dialog_title" translatable="true">Search Book</string>
    <string name="search_dialog_ok" translatable="false">search</string>
    <string name="search_dialog_cancel" translatable="false">cancel</string>
    <string name="image_transition" translatable="false">transition</string>
    <string name="description_text" translatable="false">Description</string>
    <string name="read_book" translatable="true">Read Book Preview</string>
    <string name="book_search_pref_key" translatable="false">bookSearchKey</string>
    <string name="book_search_default_val" translatable="false">J.K. Rowling</string>
    <string name="book_search_val" translatable="true">Default Search</string>
    <string name="list_search_by_key" translatable="false">searchBy</string>
    <string name="list_search_by_title" translatable="true">Search By</string>
    <string name="search_by_author_val" translatable="true">Author</string>
    <string name="search_by_title_val" translatable="true">Title of Book</string>
    <string name="search_by_publisher_val" translatable="true">Publisher</string>
    <string name="search_by_subject_val" translatable="true">Subject</string>

    <string name="search_by_author_key" translatable="false">inauthor</string>
    <string name="search_by_title_key" translatable="false">intitle</string>
    <string name="search_by_publisher_key" translatable="false">inpublisher</string>
    <string name="search_by_subject_key" translatable="false">subject</string>
    
    <string name="check_ad_title" translatable="true">Display Ads</string>
    <string name="check_ad_key" translatable="false">displayAds</string>
    <string name="check_ad_summary" translatable="true">should display ad</string>
    <string name="display_fav_book_title" translatable="true">Display Favorites</string>
    <string name="display_fav_key" translatable="false">favKey</string>
    <string name="display_fav_summary" translatable="true">should display favorites</string>

    <string name="toast_fav_added" translatable="true">Added to Favorites</string>
    <string name="toast_fav_failed" translatable="true">Unable to add to favorites.Try later!</string>
    <string name="toast_fav_removed" translatable="true">Removed from favorites.</string>
    <string name="toast_fav_removed_failed" translatable="true">Unable to remove from favorites.Try later!</string>

    <string name="empty_widget_list" translatable="true">No Favorites.</string>
    <string name="banner_id" translatable="false"> ca-app-pub-1913689525530815/7280201681</string>
    <string name="ad_description" translatable="true">Ad</string>
    <string name="detail_image_description" translatable="true">Image of book</string>
    <string name="icon_author_des" translatable="true">Author</string>
    <string name="icon_book_pagesize" translatable="false">Number of pages in book</string>
    <string name="icon_cat_des" translatable="true">Category</string>
    <string name="icon_lang_des" translatable="true">Language</string>
    <string name="fab_fav_des">add to favorites</string>
    <string name="net_up_count_0">No data received or books not available.</string>
    <string name="net_down">No Internet connection</string>
    <string name="no_books">No Books for given query</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
