<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/detail_coordinate_layout"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/detail_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >

            <ImageView
                android:contentDescription="@string/detail_image_description"
                android:transitionName="@string/image_transition"
                android:id="@+id/detail_book_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginBottom="16dp"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:contentDescription="@string/icon_author_des"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/writer_icon"/>
                    <TextView
                        android:textColor="#000"
                        android:textAlignment="center"
                        tools:text="Author name"
                        android:id="@+id/author_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:contentDescription="@string/icon_book_pagesize"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/open_book_icon"/>
                    <TextView
                        android:textColor="#000"
                        android:textAlignment="center"
                        tools:text="100 pages"
                        android:id="@+id/book_size_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:contentDescription="@string/icon_cat_des"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/category"/>
                    <TextView
                        android:textAlignment="center"
                        tools:text="History"
                        android:textColor="#000"
                        android:id="@+id/book_category_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:contentDescription="@string/icon_lang_des"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/lang"/>
                    <TextView
                        android:textAlignment="center"
                        tools:text="English"
                        android:textColor="#000"
                        android:id="@+id/book_lang_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="8dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:elevation="4dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">
                <TextView
                    android:textAlignment="center"
                    tools:text="Description"
                    android:text="@string/description_text"
                    android:textColor="#000"
                    android:textSize="32sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:lineSpacingMultiplier="0.9"
                    android:paddingBottom="16dp"
                    android:textSize="@dimen/detail_body_text_size"
                    android:textStyle="bold"
                    android:id="@+id/text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/read_book"
                    android:layout_marginBottom="16dp"
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_height="36dp"
                    android:text="@string/read_book"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_star_rate_white_18px"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:elevation="@dimen/fab_standard_elevation"
        android:contentDescription="@string/fab_fav_des"
        app:pressedTranslationZ="@dimen/fab_pressed"
        />
</android.support.design.widget.CoordinatorLayout>